--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
       <p class="hint">Database With Cloud Department</p>
     </div>
      <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Animated-nepal-flag-image-0007.gif" alt="Nepal Flag">
-     <img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Small_gif.gif" alt="IRD Logo" style="height:60px;">
   </header>
 
   <div class="container">
@@ -207,7 +206,7 @@ function toggleFolder(el){ el.parentElement.classList.toggle('open'); }
 function loadEsewaForm(){ const f=document.getElementById('contentFrame'); f.srcdoc = `<html><head><meta charset="utf-8"><title>Esewa Form</title><style>body{font-family:Segoe UI;padding:20px;background:linear-gradient(135deg,#f6fbff,#ffffff);}h3{color:#003366}</style></head><body><h3>Esewa Form Section</h3><p>Existing code placeholder — integrate your existing form here.</p></body></html>`; }
 
 /* DASHBOARD */
-const APP_KEYS = ['esewa_entries_v1','collectorData_v_final','bank_statement_html_v2'];
+const APP_KEYS = ['Key: esewa_entries_v1','collectorData_v_final','bank_statement_html_v2'];
 function safeParseLocal(key){
   try{
     const raw = localStorage.getItem(key);
@@ -239,12 +238,11 @@ function loadDashboard(){
       </style>
     </head>
     <body>
-      <h2>📊 Dashboard Summary</h2>
-      <div class="cards">
-        <div class="card"><h3>Esewa Records</h3><div class="num">${esewa.length}</div><div class="muted">Key: esewa_entries_v1</div></div>
-        <div class="card"><h3>Collector Entries</h3><div class="num">${collector.length}</div><div class="muted">Key: collectorData_v_final</div></div>
-        <div class="card"><h3>Bank Statements</h3><div class="num">${bank.length}</div><div class="muted">Key: bank_statement_html_v2</div></div>
+      <h2></h2>
+      <div style="display:flex;align-items:center;gap:12px;">
+     <img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/ChatGPT_Image_Nov_30%2C_2025%2C_07_23_35_PM.png" alt="Hoarding Board Logo" width="1200" height="400">
       </div>
+      
       <script>
         window.addEventListener('message', e => { if(e.data?.type === 'refreshCounts'){ location.reload(); }});
       <\/script>
