--- a/index.html
+++ b/index.html
@@ -242,10 +242,11 @@ function loadDashboard(){
    
 <!-- Banner Image -->
     <div style="padding:20px; text-align:center;">
-      <img src="images/banner.png"
+      <img src="images/Bikes.gif"
            alt="Company Banner"
-           style="width:53%; max-width:1200px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.25);">
+           style="width:53%; max-width:406px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.25);">
     </div>
+
       <script>
         window.addEventListener('message', e => { if(e.data?.type === 'refreshCounts'){ location.reload(); }});
       <\/script>
@@ -309,3 +310,4 @@ document.getElementById('totalRestoreBtn').addEventListener('click', totalRestor
 </script>
 </body>
 </html>
+
