--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
   <footer class="main-footer">
     <div class="footer-left">
-      <div>© 2025 Database With Cloud Department</div>
-      <div style="font-size:12px;opacity:0.85;margin-left:8px;">(Logged in as <strong id="whoami">admin</strong>)</div>
+      <div style="font-size:12px;opacity:0.85;margin-left:8px;">(☞🟢Logged in as <strong id="whoami">admin</strong>)</div>
+      <div>© Copyright2025 Dreamwaver820®|Corp Host All Rights Reserved.</div>
     </div>
 
     <div class="footer-actions" aria-live="polite">
@@ -239,8 +239,7 @@ function loadDashboard(){
     </head>
     <body>
       <h2></h2>
-   
-<!-- Banner Image -->
+   <!-- Banner Image -->
     <div style="padding:20px; text-align:center;">
       <img src="images/Bikes.gif"
            alt="Company Banner"
@@ -310,4 +309,3 @@ document.getElementById('totalRestoreBtn').addEventListener('click', totalRestor
 </script>
 </body>
 </html>
-
